# suttons-problem

./: .gitignore  NOTEBOOK_MIGRATION_REPORT.md  README.md  advection - baldocchi.ipynb  advection - rao 1974.ipynb  advection - repeat patches - radiation balance.ipynb  advection problem - stability.ipynb  advection problem - temperature.ipynb  advection problem - v0.ipynb  advection problem - wrap.ipynb  copilot-instructions-template.md  pyproject.toml  sutton_functions.py  ~$Sutton_presentation.pptx
.github/: copilot-instructions.md
matlab_versions/: CLOSET.FOR
notebooks/: Advection - Baldocchi comparison.ipynb  Advection - Rao comparison.ipynb  Advection - general 2.ipynb  Advection - general.ipynb  Advection - general_v1.ipynb  Advection - stability.ipynb  AdvectionParams workflow.ipynb  Baldocchi - 1995 - advection to update.ipynb  Baldocchi - 1995 - advection with figures.ipynb  Baldocchi - 1995 - comparison.ipynb  ET and LST transect.ipynb  Grapex data.ipynb  Higgins - advection .ipynb  Literature review - automated.ipynb  Rao 1974 - advection.ipynb  Rao 1974 figure summary.ipynb  Reanalysis download.ipynb  Sutton's solutions.ipynb  advection - grapex.ipynb  advection - repeat patches.ipynb  advection - temperature.ipynb  advection problem - stability.ipynb  advection problem - temperature.ipynb  advection problem - v0.ipynb  advection problem - wrap.ipynb  advective_et_literature.csv  advective_et_literature.md  advective_et_litsearch.py  repeat patches - radiation balance.ipynb
overleaf_sutton/: temp
references/: notes.md
src/: sutton_functions.py
(+55 files in other folders)
