[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "suttons-problem"
version = "0.1.0"
description = "Modularized Sutton advection/stability utilities"
authors = [{ name = "Octavia Crompton" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["sutton"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
